dnl This Source Code Form is subject to the terms of the Mozilla Public
dnl License, v. 2.0. If a copy of the MPL was not distributed with this
dnl file, You can obtain one at http://mozilla.org/MPL/2.0/.
dnl
dnl Welcome to the new world of configure. We're working on moving to a
dnl python based configure. In the meanwhile, remains of the old autoconf
dnl based configure is in old-configure.in.
dnl If you need to add something, please come talk to the build system
dnl peers for now.
dnl
dnl Because adding a configure file in the tree is going to conflict with
dnl existing configure files in people's (and automation) work trees, and
dnl because some automation jobs are still running autoconf and configure
dnl "manually", this file is actually an m4 file that is processed by
dnl autoconf, but doesn't call any autoconf macros. The `divert` line
dnl below ensures the script that follows is output by autoconf.
divert(0)dnl
#!/bin/sh

SRCDIR=$(dirname $0)
TOPSRCDIR="$SRCDIR"
export OLD_CONFIGURE="$SRCDIR"/old-configure

which python2.7 > /dev/null && exec python2.7 "$TOPSRCDIR/configure.py" "$@" || exec python "$TOPSRCDIR/configure.py" "$@"
