dnl The contents of this file are subject to the Mozilla Public License
dnl Version 1.0 (the "License"); you may not use this file except in
dnl compliance with the License. You may obtain a copy of the License
dnl at http://www.mozilla.org/MPL/
dnl
dnl Software distributed under the License is distributed on an "AS IS"
dnl basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See
dnl the License for the specific language governing rights and
dnl limitations under the License.
dnl
dnl The Original Code is this file as it was released upon August 6, 1999.
dnl
dnl The Initial Developer of this code under the MPL is Jeff Galyan,
dnl <jeffrey.galyan@sun.com>.  Portions created by Jeff Galyan
dnl are Copyright (C) 1999 Jeff Galyan.  All Rights Reserved.
dnl
dnl Contributors:
dnl
dnl Process this file with autoconf to produce a configure script.
AC_INIT()

dnl Checks for programs.
AC_CHECK_PROGS(java_compiler, javac-ea javac jikes)
AC_CHECK_PROGS(java_run, java)
AC_CHECK_PROGS(java_doc, javadoc)
 
AC_OUTPUT(mime/extractor/Makefile composition/Makefile storage/Makefile search/Makefile dnd/Makefile widgets/Makefile storage/addressparser/Makefile mime/encoder/Makefile filters/Makefile dog/mail/util/Makefile dog/Makefile view/Makefile calypso/Makefile dog/mail/nntp/Makefile util/Makefile ui/Makefile integrator/Makefile storage/intertwingle/Makefile prefs/Makefile addressbook/addresscard/Makefile mime/parser/Makefile dog/util/Makefile calypso/util/Makefile mime/Makefile prefs/base/Makefile mime/html/Makefile dog/mail/Makefile prefs/ui/Makefile addressbook/Makefile Makefile)
